_site/sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_list_index2.q
FROM src_thrift
INSERT OVERWRITE TABLE dest1 SELECT src_thrift.lint[0], src_thrift.lstring[1 + 2]
